<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start">

    <!--checker vcu drawer-->
    <RelativeLayout
        android:id="@+id/rl_drawer_vcu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        >
        <Button
            android:id="@+id/btn_vcu_gysd"
            android:text="@string/vcu_gysd_btn"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="160dp" />

        <Button
            android:id="@+id/btn_vcu_niuju_jisuan"
            android:text="@string/vcu_niuju_jisuan_btn"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="260dp" />

        <Button
            android:id="@+id/btn_vcu_gyxd"
            android:text="@string/vcu_gyxd_btn"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="360dp" />

        <Button
            android:id="@+id/btn_vcu_charging"
            android:text="@string/vcu_charging_btn"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="460dp" />

        <Button
            android:id="@+id/btn_vcu_obc"
            android:text="@string/vcu_obc_btn"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="560dp" />
    </RelativeLayout>

    <!--tbox drawer-->
    <RelativeLayout
        android:id="@+id/rl_drawer_tbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        >
        <Button
            android:id="@+id/btn_tbox_date_time"
            android:text="@string/tbox_date_time"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp" />
        <Button
            android:id="@+id/btn_tbox_data_collect"
            android:text="@string/tbox_data_collect"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="110dp" />
        <Button
            android:id="@+id/btn_tbox_data_store"
            android:text="@string/tbox_data_store"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="170dp" />
        <Button
            android:id="@+id/btn_tbox_data_transpot"
            android:text="@string/tbox_data_transport"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="230dp" />
        <Button
            android:id="@+id/btn_tbox_data_resend"
            android:text="@string/tbox_data_resend"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="300dp" />
        <Button
            android:id="@+id/btn_tbox_individual"
            android:text="@string/tbox_individual"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="360dp" />
        <Button
            android:id="@+id/btn_tbox_register"
            android:text="@string/tbox_register"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="420dp" />

        <Button
            android:id="@+id/btn_tbox_remote_control"
            android:text="@string/tbox_remote_control"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="480dp" />
        <Button
            android:id="@+id/btn_tbox_mail_and_phone"
            android:text="@string/tbox_mail_and_phone"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="540dp" />
        <Button
            android:visibility="gone"
            android:id="@+id/btn_tbox_update_firmware"
            android:text="@string/tbox_update_firmware"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="600dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_drawer_bms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent">
        <Button
            android:id="@+id/btn_drawer_bms_battery"
            android:text="@string/bms_battery"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="200dp" />
        <Button
            android:id="@+id/btn_drawer_bms_insulation_monitor"
            android:text="@string/bms_insulation_monitor"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="300dp" />
        <Button
            android:id="@+id/btn_drawer_bms_connection_detector"
            android:text="@string/bms_connect_monitor"
            android:textSize="15sp"
            android:textColor="@color/colorTextPress"
            android:background="@drawable/vcu_drawer_btn_click"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="400dp" />
    </RelativeLayout>
</FrameLayout>