<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="500dp"
    android:layout_height="270dp"
    android:background="#2C343B">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/nfc_states_change"
      android:textSize="25sp"
      android:textColor="#ffffff"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.1"
      />

  <ImageView
      android:id="@+id/iv_nfc_dialog_key_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@mipmap/ic_nfc_key_not_available"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.15"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/iv_nfc_dialog_filter_status"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.4"
      />
  <TextView
      android:id="@+id/tv_nfc_dialog_key_info"
      android:layout_width="130dp"
      android:layout_height="wrap_content"
      android:text="@string/nfc_key_not_available"
      android:textSize="@dimen/bottom_font_size"
      android:gravity="center"
      android:textColor="#ffffff"
      android:layout_marginTop="5dp"
      app:layout_constraintTop_toBottomOf="@id/iv_nfc_dialog_key_status"
      app:layout_constraintRight_toRightOf="@id/iv_nfc_dialog_key_status"
      app:layout_constraintLeft_toLeftOf="@id/iv_nfc_dialog_key_status"/>

  <ImageView
      android:id="@+id/iv_nfc_dialog_filter_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@mipmap/ic_nfc_filter_invalid"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/iv_nfc_dialog_door_status"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toEndOf="@+id/iv_nfc_dialog_key_status"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.4"
      />
  <TextView
      android:id="@+id/tv_nfc_dialog_filter_info"
      android:layout_width="130dp"
      android:layout_height="wrap_content"
      android:text="@string/filter_not_available"
      android:textSize="@dimen/bottom_font_size"
      android:gravity="center"
      android:textColor="#ffffff"
      android:layout_marginTop="5dp"
      app:layout_constraintTop_toBottomOf="@id/iv_nfc_dialog_filter_status"
      app:layout_constraintRight_toRightOf="@id/iv_nfc_dialog_filter_status"
      app:layout_constraintLeft_toLeftOf="@id/iv_nfc_dialog_filter_status"/>

  <ImageView
      android:id="@+id/iv_nfc_dialog_door_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@mipmap/ic_nfc_door_opened"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/iv_nfc_dialog_filter_status"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintVertical_bias="0.4"
      app:layout_constraintHorizontal_bias="0.85"/>

  <TextView
      android:id="@+id/tv_nfc_dialog_door_info"
      android:layout_width="130dp"
      android:layout_height="wrap_content"
      android:text="@string/nfc_lock_door"
      android:textSize="@dimen/bottom_font_size"
      android:gravity="center"
      android:textColor="#ffffff"
      android:layout_marginTop="5dp"
      app:layout_constraintTop_toBottomOf="@id/iv_nfc_dialog_door_status"
      app:layout_constraintRight_toRightOf="@id/iv_nfc_dialog_door_status"
      app:layout_constraintLeft_toLeftOf="@id/iv_nfc_dialog_door_status"/>
</androidx.constraintlayout.widget.ConstraintLayout>